tests/ui/treat-err-as-bug/span_delayed_bug.stderr
error: internal compiler error: delayed bug triggered by #[rustc_delayed_bug_from_inside_query]
  --> $DIR/span_delayed_bug.rs:10:1
   |
LL | fn main() {}
   | ^^^^^^^^^


error: the compiler unexpectedly panicked. this is a bug.

query stack during panic:
#0 [trigger_delayed_bug] triggering a delayed bug for testing incremental
end of query stack
